<resources >
    <string name="app_name">42Password</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_test">Test</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Config</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="action_search">Search</string>
    <string name="hint_password">Password here…</string>
    <string name="login">login</string>
    <string name="regist">Regist</string>
    <string name="purge_database">forget password?</string>
    <string name="wrong_password">Wrong Password</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_to_purge_database">Are you sure to delete all local data??</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="editor_colomn_time">Last Edit Time:</string>
    <string name="editor_colomn_account">Account:</string>
    <string name="editor_colomn_title">Title:</string>
    <string name="editor_colomn_url">Url:</string>
    <string name="editor_colomn_password">Password:</string>
    <string name="editor_colomn_group">Group:</string>
    <string name="editor_colomn_notes">Notes:</string>
    <string name="hint_repeat_password">Repeat password here…</string>
    <string name="save">Save</string>
    <string name="editor_giveup_confirm">Are you sure to dismiss all changes and quit editor?</string>
    <string name="editor_save_confirm">Save and quit ?</string>
    <string name="editor_delete_confirm">Delete this account and quit?</string>
    <string name="chose_group">&lt;Chose group&gt;</string>
    <string name="setup_custom_group">&lt;Custom&gt;</string>
    <string name="hint_input_groupname">Input group name</string>

    <string name="biometric_dialog_cancel">Cancel</string>
    <string name="biometric_dialog_title">Verification</string>
    <string name="biometric_dialog_subtitle">Verify fingerprint to continue</string>
    <string name="biometric_dialog_state_normal">Fingerprint sensor</string>
    <string name="biometric_dialog_state_failed">Failed to identify, please try again</string>
    <string name="biometric_dialog_state_error">Verification error, please enter payment password</string>
    <string name="biometric_dialog_state_error_enable_process">Verification error, setup failed</string>
    <string name="biometric_dialog_state_succeeded">Verification successful</string>
    <string name="biometric_dialog_use_password">Use Password</string>


    <!--新版登录专用-->

</resources>
